@@ -1,3 +1,9 @@
+2003-01-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: New.
+	* c4x.texi, cpumodel.t, timeBSP.t: Various minor changes to get them
+	building.
+
 2003-01-24	Joel Sherrill <joel@OARcorp.com>
 
 	* BSP_TIMES, bsp.t, c4x.texi, callconv.t, cpumodel.t, cputable.t,
